# II4092-DOpsMOps-18222130

./: .gitignore  5  CLAUDE.md  LICENSE  Makefile  README.md
docs/: COMPONENT_VERSIONS.md  DECISIONS.md  LICENSE_COMPLIANCE.md  MIGRATION.md  REMEDIATION_RUNBOOK.md
docs/archive/audits/: ARCHITECTURE_REVIEW_2026-04-19.md  ARCHITECTURE_REVIEW_ADDENDUM_2026-04-19.md  AUDIT_2026-04-19.md  AUDIT_REPORT.md  AUDIT_TOOLS_ANALYSIS.md  CNCF_AUDIT_2026-04-24.md
materials/: LICENSE  Makefile
materials/chapters/: Bab_2.tex  Bab_4.tex
materials/notes/: IO_CASCADE_ARCHITECTURE.md
materials/proposals/: DafPus.bib  Proposal.tex  README.md
materials/proposals/chapters/: Bab_1.tex  Bab_3.tex  Bab_5.tex
materials/proposals/tables/: architecture_comparison.tex  evaluasi_knf.tex  feature_store_comparison.tex  kebutuhan_nonfungsional.tex  schedule_apr_may.tex  schedule_feb_mar.tex  schedule_oct_nov.tex  serving_comparison.tex
materials/reports/: Makefile  README.md  TEMPLATE_BAB.md  WRITING_GUIDE.md  daftar-pustaka.bib  report.aux  report.bbl  report.bcf  report.blg  report.lof  report.lot  report.out  report.run.xml  report.tex  report.toc
materials/reports/appendices/: Lampiran_A.tex  Lampiran_B.tex  Lampiran_C.tex
materials/reports/chapters/: Bab_1.tex  Bab_2.tex  Bab_3.tex  Bab_4.tex  Bab_5.tex  Bab_6.tex  (+1 more)
materials/tables/: development_cost.tex  evaluasi_kf.tex  metadata_comparison.tex  mlops_maturity_comparison.tex  monitoring_comparison.tex  offline_storage_comparison.tex  online_storage_comparison.tex  orchestration_comparison.tex  schedule_dec_jan.tex  tracking_comparison.tex
platform/: .env.example  .gitignore  clean-cni.conf  config.yaml
platform/config/: components.yaml  infrastructure.yaml  models.yaml  services.yaml
platform/scalability/: README.md  hpa-template.yaml  keda-scaledobject-template.yaml  vpa-template.yaml
platform/services/airflow/: Dockerfile  pyproject.toml  requirements.txt
platform/services/automation/materialization/: .coverage  Dockerfile  main.py  pyproject.toml
platform/services/automation/materialization/tests/: test_main.py
platform/services/automation/retraining/: .coverage  Dockerfile  main.py  pyproject.toml
platform/services/automation/retraining/tests/: test_main.py
platform/services/evidently-reporter/: pyproject.toml
platform/services/ingestion/websocket-collector/: Cargo.toml  Dockerfile
platform/services/ingestion/websocket-collector/src/: config.rs  health.rs  lib.rs  main.rs  producer.rs
platform/services/ingestion/websocket-collector/src/collectors/: generic.rs  mod.rs  tests.rs
platform/services/processing/batch/: .coverage  Dockerfile  config.py  main.py  pyproject.toml
platform/services/processing/batch/jobs/: __init__.py  backfill.py  features.py  sentiment.py
platform/services/processing/batch/tests/: test_config.py  test_jobs.py  test_main.py  test_technical.py  test_temporal.py
platform/services/processing/batch/transformers/: __init__.py  technical.py  temporal.py
platform/services/quality/analyzer/: .coverage  Dockerfile  main.py  pyproject.toml
platform/services/quality/analyzer/jobs/: expectations.py  outlier.py
platform/services/quality/analyzer/tests/: test_expectations.py  test_main.py  test_outlier.py
platform/services/quality/drift/: .coverage  .dockerignore  Dockerfile  ks_test.py  main.py  pyproject.toml
platform/services/quality/drift/tests/: test_psi.py
platform/services/quality/validator/: Cargo.toml  Dockerfile
platform/services/quality/validator/src/: config.rs  main.rs  producer.rs
platform/services/quality/validator/src/validator/: bounds.rs  dedup.rs  mod.rs  schema.rs  tests.rs
platform/services/serving/feature-cache/: Cargo.toml  Dockerfile
platform/services/serving/feature-cache/src/: config.rs  main.rs
platform/services/serving/feature-cache/src/cache/: mod.rs  store.rs
platform/services/serving/feature-cache/src/grpc/: server.rs
platform/services/serving/scoring/: Dockerfile  main.py  pyproject.toml
platform/services/serving/scoring/tests/: test_main.py
platform/services/trainer/: .coverage  Dockerfile  main.py  pyproject.toml
platform/services/trainer/src/: main.py  trainer.py
platform/services/trainer/tests/: test_exporter.py  test_model_factory.py
scripts/: apply-component.sh  apply-namespaces.sh  create-buckets.sh  generate_kustomization.py  list-components.sh  nuke-vps.sh  nuke.sh  preflight.sh  prune-stuck-sandboxes.sh  reclaim-cni-ipam.sh  render-scalability.sh  retry.sh  scale-up-platform.sh  scale-zero-all.sh  scale.sh  seed-gitea.sh  seed-openbao-from-env.sh  set-replicas-zero.py  setup-databases.sh  setup-toolchain.sh  wait-component.sh  wipe-data.sh
use-case-crypto/: .env.example  .gitignore  .golangci.yml  Dockerfile.dbt  Dockerfile.feast  README.md
use-case-crypto/.cargo/: config.toml
use-case-crypto/argocd/: application.yaml  applicationset.yaml
use-case-crypto/config/: project.yaml  services.yaml
use-case-crypto/dags/: _observability.py  crypto_data_pipeline.py  crypto_quality_gate.py  data_pipeline.py  lakehouse.py  quality_gate.py
use-case-crypto/database/: init_clickhouse.sql  init_database.sh  init_postgres.sql
use-case-crypto/dbt/: .user.yml  dbt_project.yml  profiles.yml
use-case-crypto/docs/: ADRS.md  CHANGELOG.md  MIGRATION.md  RUNBOOK.md
use-case-crypto/pipelines/: retraining_pipeline.py  retraining_pipeline.yaml  submit_recurring.py
use-case-crypto/proto/: common.proto  drift.proto  features.proto  inference.proto  messages.proto  mlbridge.proto  ohlcv.proto
use-case-crypto/scripts/: build-images.sh  configure-use-case.sh  generate_kustomization.py  proto-gen.sh  run-e2e-workflow.sh  seed-openbao.sh
use-case-crypto/services/: .gitignore  README.md
use-case-crypto/services/dashboard/ml-bridge/: .coverage  .dockerignore  Dockerfile  main.py  pyproject.toml
use-case-crypto/services/dashboard/ml-bridge/services/: feature.py  metrics.py  prediction.py
use-case-crypto/services/dashboard/ml-bridge/tests/: test_main.py
use-case-crypto/services/websocket-collector/: Cargo.toml  Dockerfile
(+639 files in other folders)
