[project]
name = "evidently-reporter"
version = "1.0.0"
description = "Evidently drift and quality report generator"
requires-python = ">=3.14,<3.15"

dependencies = [
    "clickhouse-connect>=0.14.0",
    "evidently>=0.7.0",
    "numpy>=2.4.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
