[project]
name = "batch"
version = "1.0.0"
description = "Batch feature engineering service"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.2.3",
    "clickhouse-connect>=0.11.0",
    "pyyaml>=6.0.2",
    # Continuous profiling — opt-in via PYROSCOPE_SERVER_ADDRESS env
    # (set by platform pipeline-config ConfigMap; see main.py init block).
    "pyroscope-io>=0.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "pytest-mock>=3.14.0", "ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
