[project]
name = "quality-analyzer"
version = "1.0.0"
description = "Data quality analyzer with Great Expectations and outlier detection"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.2.3",
    "great-expectations>=1.3.0",
    "clickhouse-connect>=0.11.0",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "pytest-mock>=3.14.0", "ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
filterwarnings = [
    "ignore::marshmallow.warnings.ChangedInMarshmallow4Warning",
]
