[project]
name = "drift"
version = "1.0.0"
description = "Multi-scale drift detection service"
requires-python = ">=3.14,<3.15"
dependencies = [
    # Latest stable as of 2026-03-21
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "clickhouse-connect>=0.14.0",
    "redis>=7.3.0",
    "pyyaml>=6.0.3",
    "prometheus-client>=0.24.1",
    # Continuous profiling — emits pprof samples to Pyroscope when
    # PYROSCOPE_SERVER_ADDRESS env is set (see main.py init block).
    "pyroscope-io>=0.8.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "pytest-mock>=3.14.0", "ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
