[package]
name = "validator"
version = "1.0.0"
edition = "2024"
authors = ["ML Pipeline Team"]
license = "MIT"
rust-version = "1.95"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored", "zstd"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
config = "0.14"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.26"
bloomfilter = "1.0"
actix-web = "4.13"
actix-rt = "2.10"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
