[project]
name = "scoring"
version = "1.0.0"
description = "Scheduled ONNX model scoring service"
requires-python = ">=3.14,<3.15"

dependencies = [
    "clickhouse-connect>=0.14.0",
    "mlflow>=3.10.0",
    "numpy>=2.4.0",
    "onnxruntime>=1.24.0",
    "pandas>=2.2.0",
    "boto3>=1.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
